force-app/main/default/objects/Policy__c/fields/PolicyMaster__c.field-meta.xml
<CustomField>
    <fullName>PolicyMaster__c</fullName>
    <label>Policy Master</label>
    <referenceTo>PolicyMaster__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>