force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>ExpiryDate__c</columns>
    <columns>PlanType__c</columns>
    <columns>PolicyMaster__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>